--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 </head>
 <body>
 
-    <audio autoplay loop  id="playAudio"><source src="assets/audio/pokemon_opening.mp3"></audio> 
+    <iframe src="assets/audio/pokemon_opening.mp3" allow="autoplay" style="display:none" id="iframeAudio"></iframe>
+    <audio autoplay loop  id="playAudio"><source src="assets/audio/pokemon_opening.mp3"></audio>
     
     <div class="bg">
 
