edited code for audio, intro music works only for chrome but not safari, updated README file

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
     <iframe src="assets/audio/pokemon_opening.mp3" allow="autoplay" style="display:none" id="iframeAudio"></iframe>
-    <audio autoplay loop  id="playAudio"><source src="assets/audio/pokemon_opening.mp3"></audio>
+    <!--<audio autoplay loop  id="playAudio"><source src="assets/audio/pokemon_opening.mp3"></audio>-->
     
     <div class="bg">
 
