fixed a minor bug, was allowing mainplayer to be opponent when button is clicked

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="Playerport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Pokemon RPG</title>
 
     <link rel="stylesheet" href="assets/css/reset.css">
     <!-- Google Font -->
